# marimocad

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  API_SPECIFICATION.md  ARCHITECTURE.md  CAD_LIBRARY_COMPARISON.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_STRUCTURES.md  DELIVERABLES.md  DESIGN_DECISIONS.md  EXAMPLES.md  FINAL_REPORT.md  FORMATS.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  POST_MERGE_SETUP.md  README.md  RELEASE_GUIDE.md  RESEARCH_SUMMARY.md  RUFF_CONFIG.md  VIEWER.md  WASM_DEPLOYMENT.md  demo.py  examples.py  pyproject.toml  verify.py
.github/workflows/: build.yml  ci.yml  deploy-wasm.yml  lint.yml  publish.yml  release.yml  security.yml  test-examples.yml  test.yml
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  DESIGN_COMPLETION_REPORT.md  DESIGN_DECISIONS.md  DIAGRAMS.md  IMPLEMENTATION_CHECKLIST.md  Makefile  PROJECT_SUMMARY.md  README.md  architecture.md  examples.py
docs/source/: conf.py  index.md
docs/source/api/: index.rst  operations.rst  shapes.rst  transforms.rst
examples/: 01_basic_shapes.py  02_boolean_operations.py  03_transformations.py  04_complex_model.py  05_parametric_design.py  README.md  basic_example.py  build123d_poc.py  cadquery_poc.py  ocp_poc.py  viewer_demo.py  wasm_demo.py
marimocad/: __init__.py  io.py
src/marimocad/: __init__.py  _types.py  boolean.py  extrude.py  geometry.py  marimo.py  operations.py  primitives.py  shapes.py  sketch.py  transforms.py  utils.py  viewer.py  visualization.py
tests/: README.md  __init__.py  conftest.py  fixtures.py  test_basic.py  test_boolean.py  test_examples.py  test_extrude.py  test_geometry.py  test_io.py  test_main.py  test_operations.py  test_primitives.py  test_shapes.py  test_sketch.py  test_transforms.py  test_utils.py  test_viewer.py  test_visualization.py
