[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marimocad"
dynamic = ["version"]
description = "CAD tools for marimo notebooks"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Tetsuo Koyama", email = "tkoyama010@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "marimo>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/tkoyama010/marimocad"
Documentation = "https://github.com/tkoyama010/marimocad#readme"
Repository = "https://github.com/tkoyama010/marimocad"
Issues = "https://github.com/tkoyama010/marimocad/issues"

[tool.hatch.version]
path = "src/marimocad/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/marimocad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=marimocad",
    "--cov-report=term-missing",
]

# Ruff Configuration - Comprehensive rule set
[tool.ruff]
line-length = 100
target-version = "py39"
# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
# Enable all rules - comprehensive linting
select = ["ALL"]

# Rules to ignore - keep this minimal
ignore = [
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "D203",    # 1 blank line required before class docstring (conflicts with D211)
    "D213",    # Multi-line docstring summary should start at the second line (conflicts with D212)
    "ISC001",  # Implicitly concatenated string literals (conflicts with formatter)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore certain rules in specific files
"__init__.py" = [
    "D104",  # Missing docstring in public package
    "F401",  # Imported but unused
]
"tests/**/*.py" = [
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function
    "ARG001",  # Unused function argument
    "BLE001",  # Do not catch blind exception (test scripts need broad catching)
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "F841",    # Local variable assigned but never used (test validation)
    "FBT001",  # Boolean positional arg in function definition
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of assert detected
    "PLC0415", # Import should be at top-level (test scripts use conditional imports)
    "T201",    # print found (test scripts use print for output)
    "TRY300",  # Consider moving statement to else block (test pattern is fine)
]
"examples/**/*.py" = [
    "ANN001",  # Missing type annotation for function argument (Marimo patterns)
    "ANN202",  # Missing return type annotation for private function (Marimo patterns)
    "ARG001",  # Unused function argument (Marimo cell dependencies)
    "B018",    # Useless expression (Marimo cells return expressions)
    "BLE001",  # Do not catch blind exception (demo code with broad error handling)
    "D100",    # Missing docstring in public module
    "D415",    # First line should end with a period (Marimo multi-line docstrings)
    "E501",    # Line too long (some example comments exceed limit)
    "ERA001",  # Commented-out code (examples show alternative approaches)
    "F401",    # Imported but unused (conditional imports for demonstration)
    "F821",    # Undefined name (Marimo cell dependencies resolved at runtime)
    "INP001",  # File is part of an implicit namespace package
    "N803",    # Argument name should be lowercase (OCP uses PascalCase)
    "N807",    # Function name should not start and end with __ (Marimo cell pattern)
    "PLC0415", # Import should be at top-level (Marimo cells use function-scoped imports)
    "PLR0911", # Too many return statements (demo functions show multiple paths)
    "PLR0913", # Too many arguments in function definition (Marimo cells with many deps)
    "PTH123",  # open() should be replaced by Path.open() (simple demo code)
    "RUF001",  # String contains ambiguous unicode (intentional in documentation)
    "S110",    # try-except-pass detected (intentional for demo fallback)
    "SIM105",  # Use contextlib.suppress (plain try-except clearer for demos)
    "SIM117",  # Use single with statement (nested clearer for demos)
    "T201",    # print found
    "TRY300",  # Consider moving statement to else block (demo pattern is fine)
]

[tool.ruff.lint.isort]
known-first-party = ["marimocad"]
force-single-line = false
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "examples/",  # Marimo notebooks use patterns incompatible with mypy (multiple __ functions)
]
